0.0.1
  13-09-27
  Initial Release
  Dirk Wildt  <http://wildt.at.die-netzmacher.de>