@@ -1,4 +1,6 @@
 0.0.1
-  13-09-27
+  13-09-30
+  Feature
+  * #52391: pi2 for development
   Initial Release
-  Dirk Wildt  <http://wildt.at.die-netzmacher.de>
+  * #52388: by Dirk Wildt  <http://wildt.at.die-netzmacher.de>
